--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/trucking?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1v9i0t8e8k9
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
